# Py_iec

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: compliance.md
src/py_iec/: __init__.py  __main__.py  cli.py  codegen.py  diagnostics.py  errors.py  excel.py  expressions.py  extraction.py  model.py  parser.py  runtime.py  statement_utils.py  type_checker.py  types.py  validator.py
tests/: conftest.py  test_cli.py  test_codegen_runtime.py  test_control_structures.py  test_excel.py  test_expressions.py  test_extraction.py  test_fixtures.py  test_model.py  test_parser.py  test_runtime_control.py  test_type_checker.py  test_validator.py
tests/fixtures/: counter.st
tests/fixtures/st/invalid/: missing_target.st
tests/fixtures/st/valid/: counter.st
