[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-iec"
version = "0.1.0"
description = "Prototype Python pour analyser un sous-ensemble IEC 61131-3."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Py_iec contributors" }]
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pdoc>=14.0",
]
excel = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.scripts]
py-iec = "py_iec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D203", "D213", "D401", "D413"]
